--- a/AuthWindow.xaml
+++ b/AuthWindow.xaml
@@ -85,24 +85,33 @@
         </Style>
 
         <!-- Стиль для PasswordBox -->
-        <Style TargetType="PasswordBox" x:Key="RoundedPasswordBox">
+        <Style TargetType="PasswordBox">
             <Setter Property="Background" Value="#FF2D2D2D"/>
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="BorderBrush" Value="#FF6A6A6A"/>
             <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="Padding" Value="10"/>
             <Setter Property="FontSize" Value="15"/>
             <Setter Property="Height" Value="45"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="PasswordBox">
                         <Border x:Name="border" 
-                        Background="{TemplateBinding Background}"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="4">
-                            <ScrollViewer x:Name="PART_ContentHost"/>
+                Background="{TemplateBinding Background}"
+                BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                CornerRadius="4"
+                Padding="0">
+                            <ScrollViewer x:Name="PART_ContentHost"
+                        Margin="0,9,0,0"/>
                         </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF7A7A7A"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF7A7A7A"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -122,19 +131,13 @@
                        Foreground="#FFCCCCCC" 
                        Margin="0 0 0 5"/>
             <TextBox x:Name="LoginTextBox" 
+                     FontSize="14"
                      Style="{StaticResource RoundedTextBox}"/>
 
             <TextBlock Text="Пароль" 
                        Foreground="#FFCCCCCC" 
                        Margin="0 10 0 5"/>
-            <PasswordBox x:Name="PasswordBox" 
-                          Background="#FF2D2D2D" 
-                          Foreground="White" 
-                          BorderBrush="#FF6A6A6A" 
-                          BorderThickness="1" 
-                          Padding="10" 
-                          FontSize="14"
-                         Style="{StaticResource RoundedPasswordBox}"/>
+            <PasswordBox x:Name="PasswordBox"/>
 
             <StackPanel VerticalAlignment="Center" 
                         HorizontalAlignment="Center" 
