--- a/UserControls/DashboardPage.xaml
+++ b/UserControls/DashboardPage.xaml
@@ -7,6 +7,24 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="Главная страница" HorizontalAlignment="Center" Foreground="Silver" VerticalAlignment="Center"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Главная страница" 
+                   HorizontalAlignment="Center" 
+                   Foreground="Silver" 
+                   FontSize="20"
+                   Margin="0,20"
+                   Grid.Row="0"/>
+
+        <Image Grid.Row="1"
+               Source="C:\Users\timbilding\source\repos\TimofeyDanilyuk\FinanceApp\bin\ShrekMeme.jpg"
+               Stretch="Uniform"
+               MaxHeight="400"
+               MaxWidth="600"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
