--- a/UserControls/ProfileSettingsPage.xaml
+++ b/UserControls/ProfileSettingsPage.xaml
@@ -9,6 +9,73 @@
              d:DesignHeight="650" d:DesignWidth="800">
 
     <UserControl.Resources>
+
+        <Style TargetType="TextBox">
+            <Setter Property="Background" Value="#FF2D2D2D"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="#FF6A6A6A"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Height" Value="45"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Border x:Name="border" 
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="4">
+                            <ScrollViewer x:Name="PART_ContentHost" 
+                                          Margin="{TemplateBinding Padding}"
+                                          VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" Value="0.5"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="BorderBrush" Value="#FF7A7A7A"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter Property="BorderBrush" Value="#FF7A7A7A"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="PasswordBox">
+            <Setter Property="Background" Value="#FF2D2D2D"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="#FF6A6A6A"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Height" Value="45"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="PasswordBox">
+                        <Border x:Name="border" 
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="4"
+                        Padding="0">
+                            <ScrollViewer x:Name="PART_ContentHost"
+                                Margin="0,9,0,0"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF7A7A7A"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF7A7A7A"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style TargetType="Button" x:Key="AuthButtonStyle">
             <Setter Property="Background" Value="#FF3A3A3A"/>
             <Setter Property="Foreground" Value="White"/>
@@ -48,8 +115,68 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <Style TargetType="CheckBox">
+            <Setter Property="Foreground" Value="Silver"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="CheckBox">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!-- Визуальная часть CheckBox -->
+                            <Border x:Name="border"
+                                Grid.Column="0"
+                                Background="#FF2D2D2D"
+                                BorderBrush="#FF6A6A6A"
+                                BorderThickness="1"
+                                CornerRadius="4"
+                                Width="18"
+                                Height="18"
+                                VerticalAlignment="Center"
+                                Margin="0,0,5,0">
+                                <Grid>
+                                    <Path x:Name="checkMark"
+                                      Data="M 0 5 L 5 10 L 12 0"
+                                      Stroke="Silver"
+                                      StrokeThickness="2"
+                                      Stretch="Fill"
+                                      Margin="1"
+                                      Visibility="Collapsed"/>
+                                </Grid>
+                            </Border>
+
+                            <!-- Текст CheckBox -->
+                            <ContentPresenter x:Name="contentPresenter"
+                                          Grid.Column="1"
+                                          Content="{TemplateBinding Content}"
+                                          VerticalAlignment="Center"
+                                          HorizontalAlignment="Left"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsChecked" Value="True">
+                                <Setter TargetName="checkMark" Property="Visibility" Value="Visible"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF7A7A7A"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF3A3A3A"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </UserControl.Resources>
-    
+
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -78,7 +205,8 @@
                                    FontWeight="SemiBold"/>
                         <TextBox x:Name="LoginTextBox" 
                                  Tag="Логин"
-                                 Margin="0 5" Height="30"/>
+                                 FontSize="14"
+                                 Margin="0 5"/>
 
                         <TextBlock Text="Пароль" 
                                    FontSize="12" 
@@ -86,20 +214,22 @@
                                    FontWeight="SemiBold"/>
                         <TextBox x:Name="PasswordTextBox" 
                                  Tag="Пароль"
-                                 Margin="0 5" Height="30"
+                                 Margin="0 5" 
+                                 FontSize="14"
                                  Visibility="Collapsed"/>
                         <PasswordBox x:Name="PasswordBox" 
                                      Tag="Пароль"
-                                     Margin="0 5" Height="30" />
-                        
+                                     Margin="0 5" />
+
                         <StackPanel Orientation="Horizontal" Margin="0 0 0 10">
                             <CheckBox x:Name="ShowPasswordCheckBox" 
-                                      Content="Показать пароль"
                                       Foreground="Silver"
                                       VerticalAlignment="Center"
-                                      Margin="0 0 5 0"
+                                      Margin="0 0 0 0"
                                       Checked="ShowPasswordCheckBox_Checked"
                                       Unchecked="ShowPasswordCheckBox_Unchecked"/>
+
+                            <TextBlock Text="Показать пароль" Foreground="Silver" FontSize="14"/>
                         </StackPanel>
 
                         <TextBlock Text="ФИО" 
@@ -108,7 +238,8 @@
                                    FontWeight="SemiBold"/>
                         <TextBox x:Name="FIOTextBox" 
                                  Tag="ФИО"
-                                 Margin="0 5" Height="30"/>
+                                 FontSize="14"
+                                 Margin="0 5"/>
                     </StackPanel>
                 </Border>
 
@@ -124,29 +255,31 @@
                                    FontSize="12" 
                                    Foreground="Silver"
                                    FontWeight="SemiBold"/>
-                        
+
                         <TextBox x:Name="TelegramNumberTextBox" 
                                  Tag="Номер телефона"
-                                 Margin="0 5" Height="30"/>
+                                 FontSize="14"
+                                 Margin="0 5"/>
 
                         <TextBlock Text="Аккаунт Telegram" 
                                    FontSize="12" 
                                    Foreground="Silver"
                                    FontWeight="SemiBold"/>
-                        
+
                         <TextBox x:Name="TLUserNameTextBox" 
                                  Tag="Имя пользователя Telegram"
-                                 Margin="0 5" Height="30"/>
+                                 FontSize="14"
+                                 Margin="0 5"/>
 
                         <TextBlock Text="ID чата в Telegram" 
                                    FontSize="12" 
                                    Foreground="Silver"
                                    FontWeight="SemiBold"/>
-                        
+
                         <TextBox x:Name="TLChatIdTextBox" 
                                  Tag="ID чата в Telegram"
-                                 Margin="0 5" Height="30"
-                                 IsReadOnly="True"/>
+                                 FontSize="14"
+                                 Margin="0 5"/>
 
                         <Button x:Name="SaveButton" 
                                 Content="Сохранить изменения" 
