--- a/UserControls/ProfileSettingsPage.xaml
+++ b/UserControls/ProfileSettingsPage.xaml
@@ -175,6 +175,46 @@
             </Setter>
         </Style>
 
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="#E6E6E6"/>
+            <Setter Property="BorderBrush" Value="#2F4F4F"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Foreground" Value="Gray"/>
+            <Setter Property="Padding" Value="8"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ToolTip">
+                        <Border 
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="4"
+                                Opacity="0.9">
+                            <ContentPresenter   
+                                              Margin="{TemplateBinding Padding}"
+                                              Content="{TemplateBinding Content}"
+                                              TextBlock.Foreground="{TemplateBinding Foreground}"/>
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsOpen" Value="True">
+                                <Trigger.EnterActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation 
+                                                Storyboard.TargetProperty="Opacity"
+                                                From="0" To="0.9" 
+                                                Duration="0:0:0.3"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </Trigger.EnterActions>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </UserControl.Resources>
 
     <Grid Margin="20">
@@ -271,10 +311,26 @@
                                  FontSize="14"
                                  Margin="0 5"/>
 
-                        <TextBlock Text="ID чата в Telegram" 
-                                   FontSize="12" 
-                                   Foreground="Silver"
-                                   FontWeight="SemiBold"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="ID чата в Telegram" 
+                                       FontSize="12" 
+                                       Foreground="Silver"
+                                       FontWeight="SemiBold"/>
+
+                            <TextBlock Text=" (помощь)"
+                                       FontSize="12" 
+                                       Foreground="Silver"
+                                       FontWeight="SemiBold">
+                                <TextBlock.ToolTip>
+                                    <ToolTip>
+                                        <TextBlock>
+                                            Для того, чтобы узнать свой ID чата перейдите в бота @getmyid_bot и отправьте команду /start.
+                                        </TextBlock>
+                                    </ToolTip>
+                                </TextBlock.ToolTip>
+                            </TextBlock>
+                        </StackPanel>
+                        
 
                         <TextBox x:Name="TLChatIdTextBox" 
                                  Tag="ID чата в Telegram"
